[package]
name = "loadbalancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
humantime = "2.1.0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.5.0"
